--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,33 @@ Thumbs.db
 # Build outputs
 build/
 public/
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+env/
+venv/
+.venv/
+.ENV
+.ENV.*
+.venv.bak
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.log
+.git/modules/
+.hypothesis/
+.pytest_cache/
+.pyre/
+.pytype/
+.ipynb_checkpoints
+__pypackages__/
